--- a/pages/changelog/local-changelog.mdx
+++ b/pages/changelog/local-changelog.mdx
@@ -1,5 +1,11 @@
 # Local Changelog
 
+## 4.0.1
+`2025-07-09`
+- 👉👉👉【Important Notice】Due to major architectural changes, version 4.0 requires manual download and installation, and does not support automatic upgrades.
+- 🔥🔥🔥【New Feature】We provide MCP Server services and work perfectly with other MCP clients, allowing you to operate the database in a conversational way anytime and anywhere.
+- ⭐⭐⭐【Optimization】The client architecture has been upgraded to enhance system security and stability, making the query of millions of data 10 times faster
+- 🐞【Fixed】Several issues
 
 ## 3.1.11
 `2025-4-30`
