--- a/pages/blog/postgres-list-databases-guide.mdx
+++ b/pages/blog/postgres-list-databases-guide.mdx
@@ -1,7 +1,7 @@
 ---
 title: "How to Efficiently List Databases in PostgreSQL: A Step-by-Step Guide"
 description: "Discover how to efficiently PostgreSQL list databases with essential commands and tools like Chat2DB. Enhance your database management skills through best practices and automation strategies for optimal performance and security."
-image: ""
+image: "https://i.ibb.co/wrCBnTXK/e128f4d83cb9.jpg"
 category: "Guide"
 date: July 28, 2025
 ---
