docs: update blog 7.29

--- a/pages/blog/essential-guide-column-vectors.mdx
+++ b/pages/blog/essential-guide-column-vectors.mdx
@@ -20,7 +20,13 @@ Column vectors are foundational elements in linear algebra, playing a crucial ro
 
 ### What is a Column Vector?
 
-A column vector, denoted as \(\begin{bmatrix} x_1 \\ x_2 \\ \vdots \\ x_n \end{bmatrix}\), consists of elements arranged in a vertical format. The elements can be integers, real numbers, or complex numbers. The primary distinction between column vectors and other vector types, such as row vectors, lies in their orientation: column vectors are vertical, while row vectors are horizontal.
+A **column vector**, denoted as:
+
+x1, x2, ... xn.
+
+It consists of elements arranged in a vertical format. The elements can be integers, real numbers, or complex numbers.
+
+The primary distinction between column vectors and other vector types, such as **row vectors**, lies in their orientation: column vectors are vertical, while row vectors are horizontal.
 
 ### Defining Properties and Characteristics of Column Vectors
 
@@ -32,7 +38,7 @@ Column vectors possess several key characteristics:
 
 ### Difference Between Column Vectors and Row Vectors
 
-The fundamental difference between column vectors and row vectors lies in their arrangement. A row vector is expressed as \(\begin{bmatrix} x_1 & x_2 & \cdots & x_n \end{bmatrix}\), whereas a column vector is structured vertically. This distinction impacts various mathematical operations, such as dot product and matrix multiplication, which are defined differently for row and column vectors.
+The fundamental difference between column vectors and row vectors lies in their arrangement. This distinction impacts various mathematical operations, such as dot product and matrix multiplication, which are defined differently for row and column vectors.
 
 ## Mathematical Operations with Column Vectors
 
