--- a/pages/blog/essential-vectors-data-field.mdx
+++ b/pages/blog/essential-vectors-data-field.mdx
@@ -26,17 +26,7 @@ A vector is a mathematical object characterized by both magnitude and direction.
 - **Row Vectors**: A matrix with a single row.
 - **Zero Vectors**: A vector with all components equal to zero.
 
-The mathematical properties of vectors, such as addition, subtraction, and scalar multiplication, are foundational for numerous data manipulation techniques. For instance, if we have two vectors \( \mathbf{A} \) and \( \mathbf{B} \):
-
-\[
-\mathbf{A} = \begin{bmatrix} a_1 \\ a_2 \\ a_3 \end{bmatrix}, \quad \mathbf{B} = \begin{bmatrix} b_1 \\ b_2 \\ b_3 \end{bmatrix}
-\]
-
-The sum of vectors \( \mathbf{A} \) and \( \mathbf{B} \) is calculated as follows:
-
-\[
-\mathbf{A} + \mathbf{B} = \begin{bmatrix} a_1 + b_1 \\ a_2 + b_2 \\ a_3 + b_3 \end{bmatrix}
-\]
+The mathematical properties of vectors, such as addition, subtraction, and scalar multiplication, are foundational for numerous data manipulation techniques.
 
 ### Importance of Vectors in Data Analysis
 
@@ -51,11 +41,7 @@ In machine learning, vectors serve as the backbone for feature representation an
 
 #### Feature Representation and Model Input
 
-When training machine learning models, data must be transformed into a numerical format. This transformation typically involves representing features as vectors. For example, consider a dataset of houses with features like square footage, number of bedrooms, and age. Each house can be represented as a vector:
-
-\[
-\mathbf{X} = \begin{bmatrix} \text{Square Footage} \\ \text{Bedrooms} \\ \text{Age} \end{bmatrix}
-\]
+When training machine learning models, data must be transformed into a numerical format. This transformation typically involves representing features as vectors. For example, consider a dataset of houses with features like square footage, number of bedrooms, and age.
 
 By representing features as vectors, machine learning algorithms can efficiently process and analyze the data.
 
@@ -128,13 +114,7 @@ Predictive analytics relies heavily on vectors to build and analyze models. Let'
 
 #### Building Predictive Models with Vectors
 
-In predictive modeling, vectors represent input features, while the output is often a scalar or another vector. For instance, in a linear regression model, the prediction can be expressed as:
-
-\[
-\mathbf{y} = \mathbf{X} \cdot \mathbf{w} + b
-\]
-
-Where \( \mathbf{y} \) is the output vector, \( \mathbf{X} \) is the feature vector, \( \mathbf{w} \) represents weights, and \( b \) is the bias.
+In predictive modeling, vectors represent input features, while the output is often a scalar or another vector.
 
 #### Vectors in Time Series Analysis
 
