--- a/pages/blog/how-to-remove-table-formatting-in-excel.mdx
+++ b/pages/blog/how-to-remove-table-formatting-in-excel.mdx
@@ -1,7 +1,7 @@
 ---
 title: "How to Effectively Remove Table Formatting in Excel"
 description: "Discover how to remove table formatting in Excel with our step-by-step guide, simplifying your data manipulation and enhancing performance. Learn effective manual and automated methods, including using VBA and Chat2DB, to streamline your data management tasks effortlessly."
-image: ""
+image: "https://i.ibb.co/Psdcd4ZC/9b47eb705337.jpg"
 category: "Guide"
 date: July 29, 2025
 ---
