--- a/pages/blog/enable-ssl-psql-secure-postgresql.mdx
+++ b/pages/blog/enable-ssl-psql-secure-postgresql.mdx
@@ -1,6 +1,6 @@
 ---
 title: "How to Enable SSL in psql for Secure PostgreSQL Connections"
-description: ""Learn how to secure PostgreSQL connections with SSL for psql, including certificate setup and troubleshooting. Master psql SSL configurations from basic encryption to advanced mutual TLS authentication for optimal database security.""
+description: "Learn how to secure PostgreSQL connections with SSL for psql, including certificate setup and troubleshooting. Master psql SSL configurations from basic encryption to advanced mutual TLS authentication for optimal database security."
 image: "https://i.ibb.co/nqWhVr5X/6c4e8ef2fa26.jpg"
 category: "Guide"
 date: August 1, 2025
