--- a/pages/blog/install-supabase-cli-local-dev.mdx
+++ b/pages/blog/install-supabase-cli-local-dev.mdx
@@ -1,7 +1,5 @@
 ---
-title: "How to Install and Use Supabase CLI for Local Development  
-
-(55 characters)"
+title: "How to Install and Use Supabase CLI for Local Development"
 description: "The Supabase CLI simplifies local PostgreSQL development with automated migrations, auth emulation, and AI-powered SQL via Chat2DB. Boost productivity with instant setup, TypeScript support, and real-time debugging tools."
 image: "https://i.ibb.co/Pvxc9KvN/f68776e8ca0b.jpg"
 category: "Guide"
