--- a/pages/blog/supabase-edge-functions-guide.mdx
+++ b/pages/blog/supabase-edge-functions-guide.mdx
@@ -1,28 +1,12 @@
 ---
-title: "How to Deploy JavaScript with Supabase Edge Functions  
-
-Supabase Edge Functions: A Complete Guide for Developers  
-
-Best Practices for Using Supabase Edge Functions  
-
-Supabase Edge Functions Explained: Key Features and Use Cases  
-
-Getting Started with Supabase Edge Functions in JavaScript"
+title: "How to Deploy JavaScript with Supabase Edge Functions"
 description: "Discover how Supabase Edge Functions revolutionize serverless computing with global distribution and seamless database integration. Learn to build low-latency applications using Deno runtime and AI tools like Chat2DB for optimized performance."
 image: "https://i.ibb.co/C30zvWVF/a906acdc9351.jpg"
 category: "Guide"
 date: August 5, 2025
 ---
 [![Click to use](/image/blog/bg/chat2db1.png)](https://app.chat2db.ai/)
-# How to Deploy JavaScript with Supabase Edge Functions  
-
-Supabase Edge Functions: A Complete Guide for Developers  
-
-Best Practices for Using Supabase Edge Functions  
-
-Supabase Edge Functions Explained: Key Features and Use Cases  
-
-Getting Started with Supabase Edge Functions in JavaScript
+# How to Deploy JavaScript with Supabase Edge Functions
 
 import Authors, { Author } from "components/authors";
 
